/*
 Navicat Premium Data Transfer

 Source Server         : first
 Source Server Type    : MySQL
 Source Server Version : 80043
 Source Host           : localhost:3306
 Source Schema         : ai_lesson_planner

 Target Server Type    : MySQL
 Target Server Version : 80043
 File Encoding         : 65001

 Date: 11/02/2026 23:27:55
*/

SET NAMES utf8mb4;
SET FOREIGN_KEY_CHECKS = 0;

-- ----------------------------
-- Table structure for alembic_version
-- ----------------------------
DROP TABLE IF EXISTS `alembic_version`;
CREATE TABLE `alembic_version`  (
  `version_num` varchar(32) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL,
  PRIMARY KEY (`version_num`) USING BTREE
) ENGINE = InnoDB CHARACTER SET = utf8mb4 COLLATE = utf8mb4_unicode_ci ROW_FORMAT = Dynamic;

-- ----------------------------
-- Records of alembic_version
-- ----------------------------
INSERT INTO `alembic_version` VALUES ('8e566dff0cee');

-- ----------------------------
-- Table structure for exercises
-- ----------------------------
DROP TABLE IF EXISTS `exercises`;
CREATE TABLE `exercises`  (
  `id` int NOT NULL AUTO_INCREMENT,
  `title` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL,
  `description` text CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NULL,
  `created_by` int NOT NULL,
  `created_at` datetime NULL DEFAULT NULL,
  PRIMARY KEY (`id`) USING BTREE,
  INDEX `created_by`(`created_by` ASC) USING BTREE,
  CONSTRAINT `exercises_ibfk_1` FOREIGN KEY (`created_by`) REFERENCES `users` (`id`) ON DELETE RESTRICT ON UPDATE RESTRICT
) ENGINE = InnoDB AUTO_INCREMENT = 30 CHARACTER SET = utf8mb4 COLLATE = utf8mb4_unicode_ci ROW_FORMAT = Dynamic;

-- ----------------------------
-- Records of exercises
-- ----------------------------
INSERT INTO `exercises` VALUES (1, '习题 - 1-10的加减法', '好的，这是一组为小学一年级学生设计的1-10加减法习题。\n\n---\n\n**小学一年级数学练习：1-10的加减法**\n\n**班级：__________ 姓名：__________ 日期：__________ 得分：__________**\n\n**一、请你算一算，填一填。（共10题）**\n\n1.  2 + 3 = _______\n2.  6 - 4 = _______\n3.  5 + 1 = _______\n4.  8 - 3 = _______\n5.  4 + 4 = _______\n6.  7 - 2 = _______\n7.  3 + 6 = _______\n8.  9 - 5 = _______\n9.  1 + 7 = _______\n10. 10 - 6 = _______\n\n---\n\n**参考答案**\n\n**一、请你算一算，填一填。**\n\n1.  2 + 3 = **5**\n2.  6 - 4 = **2**\n3.  5 + 1 = **6**\n4.  8 - 3 = **5**\n5.  4 + 4 = **8**\n6.  7 - 2 = **5**\n7.  3 + 6 = **9**\n8.  9 - 5 = **4**\n9.  1 + 7 = **8**\n10. 10 - 6 = **4**', 1, '2026-02-10 10:57:20');
INSERT INTO `exercises` VALUES (2, '习题 - 1-10的加减法', '好的，这是一组为小学一年级学生设计的1-10加减法习题。\n\n---\n\n**小学一年级数学练习：1-10加减法**\n\n**班级：_________ 姓名：_________ 日期：_________**\n\n**小朋友们，请仔细计算，把答案写在横线上。**\n\n1.  1 + 2 = _________\n2.  5 - 1 = _________\n3.  3 + 4 = _________\n4.  8 - 3 = _________\n5.  4 + 4 = _________\n6.  10 - 2 = _________\n7.  7 + 3 = _________\n8.  9 - 6 = _________\n9.  2 + 6 = _________\n10. 10 - 5 = _________\n\n---\n\n**参考答案**\n\n1.  3\n2.  4\n3.  7\n4.  5\n5.  8\n6.  8\n7.  10\n8.  3\n9.  8\n10. 5', 1, '2026-02-10 10:57:21');
INSERT INTO `exercises` VALUES (3, '习题 - 1-10的加减法', '好的，这是一组为小学一年级学生设计的1-10加减法练习题。\n\n---\n\n**小学一年级数学练习：1-10的加减法**\n\n**班级：_________ 姓名：_________ 日期：_________ 分数：_________**\n\n**请计算下列题目，并在括号里填上正确的数字。**\n\n1.  2 + 3 = ( )\n2.  8 - 4 = ( )\n3.  5 + 0 = ( )\n4.  7 - 2 = ( )\n5.  1 + 9 = ( )\n6.  6 - 6 = ( )\n7.  4 + 5 = ( )\n8.  10 - 3 = ( )\n9.  3 + 4 = ( )\n10. 9 - 5 = ( )\n\n---\n\n**答案**\n\n1.  2 + 3 = ( **5** )\n2.  8 - 4 = ( **4** )\n3.  5 + 0 = ( **5** )\n4.  7 - 2 = ( **5** )\n5.  1 + 9 = ( **10** )\n6.  6 - 6 = ( **0** )\n7.  4 + 5 = ( **9** )\n8.  10 - 3 = ( **7** )\n9.  3 + 4 = ( **7** )\n10. 9 - 5 = ( **4** )', 1, '2026-02-10 10:57:37');
INSERT INTO `exercises` VALUES (4, '习题 - 1-10的加减法', '好的，这是一组为小学一年级学生设计的1-10加减法习题。\n\n---\n\n**小学一年级数学练习：1-10加减法**\n\n**小朋友，请你仔细计算，并把答案写出来吧！**\n\n1.  1 + 2 = ___\n2.  4 + 3 = ___\n3.  5 - 1 = ___\n4.  7 - 4 = ___\n5.  6 + 2 = ___\n6.  10 - 3 = ___\n7.  2 + 7 = ___\n8.  9 - 5 = ___\n9.  4 + 5 = ___\n10. 8 - 6 = ___\n\n---\n\n**答案**\n\n1.  1 + 2 = **3**\n2.  4 + 3 = **7**\n3.  5 - 1 = **4**\n4.  7 - 4 = **3**\n5.  6 + 2 = **8**\n6.  10 - 3 = **7**\n7.  2 + 7 = **9**\n8.  9 - 5 = **4**\n9.  4 + 5 = **9**\n10. 8 - 6 = **2**', 1, '2026-02-10 10:57:37');
INSERT INTO `exercises` VALUES (5, '习题 - 1-20的认识', '好的，这是一年级数学关于1-20认识的习题，共15题，包含填空题和选择题，并附带答案。\n\n---\n\n## 小学一年级数学：1-20的认识\n\n**姓名：__________ 班级：__________ 日期：__________**\n\n**一、填空题 (共8题，每空1分)**\n\n1.  请写出下面数列中缺少的数字：\n    1，2，(   )，4，5\n\n2.  请写出下面数列中缺少的数字：\n    (   )，7，8，9\n\n3.  请写出下面数列中缺少的数字：\n    10，(   )，12，13\n\n4.  请写出下面数列中缺少的数字：\n    16，17，(   )，19\n\n5.  数字“五”用阿拉伯数字写是：(   )\n\n6.  数字“十三”用阿拉伯数字写是：(   )\n\n7.  数一数，这里有8个小三角形△△△△△△△△，请写出数字：(   )个\n\n8.  数一数，这里有15朵小花🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸🌸，请写出数字：(   )朵\n\n**二、选择题 (共7题，请选择正确答案的序号填在括号里，每题1分)**\n\n9.  哪个数字是“七”？\n    A) 1\n    B) 7\n    C) 17\n\n10. 哪个数字是“十八”？\n    A) 8\n    B) 10\n    C) 18\n\n11. 数一数，这里有11颗星星⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️，请选择正确的数字：\n    A) 10\n    B) 11\n    C) 12\n\n12. 比14大一点点的数字是哪个？\n    A) 13\n    B) 15\n    C) 16\n\n13. 比20小一点点的数字是哪个？\n    A) 18\n    B) 19\n    C) 21\n\n14. 在数字9和11中间的数字是哪个？\n    A) 8\n    B) 10\n    C) 12\n\n15. 哪个数字比5大，比7小？\n    A) 4\n    B) 6\n    C) 8\n\n---\n\n## 答案\n\n**一、填空题**\n\n1.  3\n2.  6\n3.  11\n4.  18\n5.  5\n6.  13\n7.  8\n8.  15\n\n**二、选择题**\n\n9.  B\n10. C\n11. B\n12. B\n13. B\n14. B\n15. B', 1, '2026-02-10 10:59:09');
INSERT INTO `exercises` VALUES (6, '习题 - 10以内加法', '好的，请看这组为小学一年级学生设计的10以内加法习题。\n\n---\n\n### 小学一年级数学：10以内加法练习\n\n**小朋友们，请你算一算，把答案写在横线上吧！**\n\n1.  1 + 2 = ______\n2.  3 + 0 = ______\n3.  2 + 2 = ______\n4.  4 + 1 = ______\n5.  5 + 3 = ______\n6.  6 + 2 = ______\n7.  7 + 1 = ______\n8.  8 + 2 = ______\n9.  3 + 3 = ______\n10. 5 + 5 = ______\n\n---\n\n### 参考答案\n\n1.  1 + 2 = **3**\n2.  3 + 0 = **3**\n3.  2 + 2 = **4**\n4.  4 + 1 = **5**\n5.  5 + 3 = **8**\n6.  6 + 2 = **8**\n7.  7 + 1 = **8**\n8.  8 + 2 = **10**\n9.  3 + 3 = **6**\n10. 5 + 5 = **10**', 1, '2026-02-10 11:01:19');
INSERT INTO `exercises` VALUES (7, '习题 - 10以内加法', '好的，这是一组为小学一年级学生设计的10以内加法练习题。\n\n---\n\n### 小学一年级数学练习题：10以内加法\n\n**说明：** 请计算出下列各题的结果，并填入括号中。\n\n1.  1 + 2 = ( )\n2.  3 + 1 = ( )\n3.  2 + 2 = ( )\n4.  4 + 0 = ( )\n5.  3 + 2 = ( )\n6.  1 + 5 = ( )\n7.  4 + 3 = ( )\n8.  2 + 5 = ( )\n9.  6 + 1 = ( )\n10. 5 + 3 = ( )\n\n---\n\n### 参考答案\n\n1.  1 + 2 = ( **3** )\n2.  3 + 1 = ( **4** )\n3.  2 + 2 = ( **4** )\n4.  4 + 0 = ( **4** )\n5.  3 + 2 = ( **5** )\n6.  1 + 5 = ( **6** )\n7.  4 + 3 = ( **7** )\n8.  2 + 5 = ( **7** )\n9.  6 + 1 = ( **7** )\n10. 5 + 3 = ( **8** )', 1, '2026-02-10 11:01:20');
INSERT INTO `exercises` VALUES (8, '习题 - 10以内减法', '好的，这是一份为小学一年级学生设计的10以内减法练习题。\n\n---\n\n**小学一年级数学练习题：10以内减法**\n\n**一、填空题 (请在括号里填上正确的数字)：**\n\n1.  5 - 2 = ( )\n2.  8 - 3 = ( )\n3.  7 - 1 = ( )\n4.  9 - 4 = ( )\n5.  6 - 5 = ( )\n6.  10 - 3 = ( )\n7.  4 - 0 = ( )\n8.  7 - 7 = ( )\n9.  9 - 2 = ( )\n10. 6 - 1 = ( )\n\n---\n\n**答案**\n\n1.  3\n2.  5\n3.  6\n4.  5\n5.  1\n6.  7\n7.  4\n8.  0\n9.  7\n10. 5', 1, '2026-02-10 11:02:52');
INSERT INTO `exercises` VALUES (9, '习题 - 10以内减法', '好的，这是一组为小学一年级学生设计的10以内减法练习题。\n\n---\n\n### 小学一年级数学练习题：10以内减法\n\n**知识点/主题：** 10以内减法\n**要求：** 仔细计算，在括号里填上正确的数字。\n\n1.  5 - 2 = ( )\n2.  3 - 1 = ( )\n3.  7 - 4 = ( )\n4.  9 - 5 = ( )\n5.  4 - 4 = ( )\n6.  8 - 1 = ( )\n7.  6 - 0 = ( )\n8.  10 - 3 = ( )\n9.  7 - 2 = ( )\n10. 5 - 0 = ( )\n\n---\n\n### 参考答案\n\n1.  5 - 2 = ( 3 )\n2.  3 - 1 = ( 2 )\n3.  7 - 4 = ( 3 )\n4.  9 - 5 = ( 4 )\n5.  4 - 4 = ( 0 )\n6.  8 - 1 = ( 7 )\n7.  6 - 0 = ( 6 )\n8.  10 - 3 = ( 7 )\n9.  7 - 2 = ( 5 )\n10. 5 - 0 = ( 5 )', 1, '2026-02-10 11:02:53');
INSERT INTO `exercises` VALUES (10, '习题 - 整式加减', '好的，这是一组为小学一年级学生设计的数学习题。\n\n**重要提示：**\n请注意，小学一年级通常不涉及“整式加减”这一概念，该概念属于中学数学范畴。此处根据小学一年级数学教学大纲，将其理解为**“20以内的加减法”**，题目类型以填空题为主，难度为简单。\n\n---\n\n**小学一年级数学练习题：20以内的加减法**\n\n**年级：** 小学一年级\n**学科：** 数学\n**主题：** 20以内的加减法\n**题型：** 填空题\n**难度：** 简单\n**题量：** 10题\n\n---\n\n**题目：**\n\n1.  2 + 3 = ( )\n2.  7 - 4 = ( )\n3.  5 + 5 = ( )\n4.  9 - 2 = ( )\n5.  6 + ( ) = 10\n6.  10 - ( ) = 4\n7.  1 + 8 = ( )\n8.  12 - 2 = ( )\n9.  4 + 6 + 1 = ( )\n10. 8 + 0 - 3 = ( )\n\n---\n\n**答案：**\n\n1.  2 + 3 = ( 5 )\n2.  7 - 4 = ( 3 )\n3.  5 + 5 = ( 10 )\n4.  9 - 2 = ( 7 )\n5.  6 + ( 4 ) = 10\n6.  10 - ( 6 ) = 4\n7.  1 + 8 = ( 9 )\n8.  12 - 2 = ( 10 )\n9.  4 + 6 + 1 = ( 11 )\n10. 8 + 0 - 3 = ( 5 )', 1, '2026-02-10 11:04:18');
INSERT INTO `exercises` VALUES (11, '习题 - 整式加减', '好的，根据您的要求，这是一份为小学一年级学生设计的数学习题，主题是整数的加减法（将“整式加减”理解为小学阶段的“整数加减”）。\n\n---\n\n**小学一年级数学练习题**\n\n**知识点/主题：** 100以内的加减法初步（基于一年级实际教学内容）\n**难度：** 简单\n**题型：** 填空题\n\n**请完成以下习题：**\n\n1.  3 + 5 = ( )\n2.  9 - 4 = ( )\n3.  7 + ( ) = 10\n4.  8 - 3 = ( )\n5.  6 + 2 = ( )\n6.  ( ) + 4 = 9\n7.  10 - 7 = ( )\n8.  1 + 8 = ( )\n9.  5 + ( ) = 9\n10. 12 - 2 = ( )\n\n---\n\n**答案**\n\n1.  8\n2.  5\n3.  3\n4.  5\n5.  8\n6.  5\n7.  3\n8.  9\n9.  4\n10. 10', 1, '2026-02-10 11:05:23');
INSERT INTO `exercises` VALUES (12, '习题 - 整式加减', '好的，请看为小学一年级学生设计的“找找藏起来的数字”数学习题。虽然“整式加减”是高年级概念，但对于一年级，我们将其理解为在简单的加减法算式中找出缺失的数字（即“代数”思想的启蒙），使用方框或横线代表未知数。\n\n---\n\n**小学一年级数学练习：找找藏起来的数字**\n\n**小朋友，请仔细看题，在横线上填上正确的数字。**\n\n**一、填空题 (每题10分，共100分)**\n\n1.  3 + 5 = ____\n2.  9 - 4 = ____\n3.  6 + ____ = 10\n4.  ____ + 7 = 12\n5.  8 - ____ = 2\n6.  ____ - 5 = 3\n7.  2 + 7 = ____\n8.  10 - 3 = ____\n9.  4 + ____ = 11\n10. ____ - 6 = 4\n\n---\n\n**答案**\n\n1.  8\n2.  5\n3.  4\n4.  5\n5.  6\n6.  8\n7.  9\n8.  7\n9.  7\n10. 10', 1, '2026-02-10 11:05:23');
INSERT INTO `exercises` VALUES (13, '习题 - 分数比较', '好的，这是一组为小学三年级学生设计的数学分数比较习题。\n\n---\n\n**小学三年级数学练习：分数比较**\n\n**知识点/主题：** 分数比较\n**题型：** 填空题 (用“>”、“<”或“=”填空)\n**难度：** 简单\n**题量：** 10题\n\n**小朋友们，请仔细观察分数的大小，在横线上填上“>”、“<”或“=”：**\n\n**题目：**\n\n1.  $\\frac{1}{5}$ _____ $\\frac{3}{5}$\n2.  $\\frac{1}{4}$ _____ $\\frac{1}{2}$\n3.  $\\frac{4}{6}$ _____ $\\frac{2}{6}$\n4.  $\\frac{3}{8}$ _____ $\\frac{3}{5}$\n5.  $\\frac{5}{5}$ _____ $1$\n6.  $\\frac{2}{3}$ _____ $\\frac{2}{5}$\n7.  $\\frac{7}{10}$ _____ $\\frac{3}{10}$\n8.  $\\frac{1}{6}$ _____ $\\frac{1}{3}$\n9.  $\\frac{2}{8}$ _____ $\\frac{5}{8}$\n10. $\\frac{4}{7}$ _____ $\\frac{4}{9}$\n\n---\n\n**参考答案：**\n\n1.  $\\frac{1}{5}$ **<** $\\frac{3}{5}$\n2.  $\\frac{1}{4}$ **<** $\\frac{1}{2}$\n3.  $\\frac{4}{6}$ **>** $\\frac{2}{6}$\n4.  $\\frac{3}{8}$ **<** $\\frac{3}{5}$\n5.  $\\frac{5}{5}$ **=** $1$\n6.  $\\frac{2}{3}$ **>** $\\frac{2}{5}$\n7.  $\\frac{7}{10}$ **>** $\\frac{3}{10}$\n8.  $\\frac{1}{6}$ **<** $\\frac{1}{3}$\n9.  $\\frac{2}{8}$ **<** $\\frac{5}{8}$\n10. $\\frac{4}{7}$ **>** $\\frac{4}{9}$', 1, '2026-02-10 11:06:51');
INSERT INTO `exercises` VALUES (14, '习题 - 10以内加法', '好的，这是一组为小学一年级学生设计的10以内加法习题。\n\n---\n\n**小学一年级数学：10以内加法练习题**\n\n**姓名：_________ 日期：_________**\n\n**请在横线上填上正确的数字。**\n\n1.  1 + 2 = ____\n2.  3 + 1 = ____\n3.  0 + 5 = ____\n4.  2 + 3 = ____\n5.  4 + 2 = ____\n6.  1 + 6 = ____\n7.  5 + 3 = ____\n8.  7 + 3 = ____\n9.  2 + 7 = ____\n10. 8 + 1 = ____\n\n---\n\n**参考答案**\n\n1.  1 + 2 = **3**\n2.  3 + 1 = **4**\n3.  0 + 5 = **5**\n4.  2 + 3 = **5**\n5.  4 + 2 = **6**\n6.  1 + 6 = **7**\n7.  5 + 3 = **8**\n8.  7 + 3 = **10**\n9.  2 + 7 = **9**\n10. 8 + 1 = **9**', 1, '2026-02-10 11:10:00');
INSERT INTO `exercises` VALUES (15, '习题 - 10以内加法', '好的，这是一组小学一年级数学10以内加法习题：\n\n---\n\n**小学一年级数学练习**\n\n**主题：10以内加法**\n\n**一、请在括号里填上正确的数字。（每题1分，共10分）**\n\n1.  2 + 3 = ( )\n2.  4 + 0 = ( )\n3.  5 + 1 = ( )\n4.  3 + 3 = ( )\n5.  6 + 2 = ( )\n6.  7 + 1 = ( )\n7.  5 + 5 = ( )\n8.  4 + 4 = ( )\n9.  8 + 2 = ( )\n10. 1 + 6 = ( )\n\n---\n\n**答案**\n\n**一、请在括号里填上正确的数字。**\n\n1.  2 + 3 = ( 5 )\n2.  4 + 0 = ( 4 )\n3.  5 + 1 = ( 6 )\n4.  3 + 3 = ( 6 )\n5.  6 + 2 = ( 8 )\n6.  7 + 1 = ( 8 )\n7.  5 + 5 = ( 10 )\n8.  4 + 4 = ( 8 )\n9.  8 + 2 = ( 10 )\n10. 1 + 6 = ( 7 )', 1, '2026-02-10 11:10:01');
INSERT INTO `exercises` VALUES (16, '习题 - 10以内减法', '好的，这是一年级数学10以内减法的习题，包含题目和答案。\n\n---\n\n## 小学一年级数学练习：10以内减法\n\n**知识点：** 10以内减法\n**题型：** 填空\n**难度：** 简单\n**总题量：** 10题\n\n---\n\n**一、请计算下列算式，并把答案填在括号里。**\n\n1.  5 - 2 = ( )\n2.  8 - 3 = ( )\n3.  6 - 0 = ( )\n4.  7 - 7 = ( )\n5.  10 - 4 = ( )\n6.  4 - 1 = ( )\n7.  9 - 2 = ( )\n8.  3 - 0 = ( )\n9.  8 - 5 = ( )\n10. 10 - 7 = ( )\n\n---\n\n### 参考答案\n\n1.  3\n2.  5\n3.  6\n4.  0\n5.  6\n6.  3\n7.  7\n8.  3\n9.  3\n10. 3', 1, '2026-02-10 11:11:48');
INSERT INTO `exercises` VALUES (17, '习题 - 10以内减法', '好的，这是一组为小学一年级学生设计的10以内减法习题。\n\n---\n\n**小学一年级数学练习：10以内减法**\n\n**班级：_________ 姓名：_________ 日期：_________**\n\n**请计算下列减法题：**\n\n1.  5 - 1 = ____\n2.  8 - 3 = ____\n3.  6 - 6 = ____\n4.  7 - 2 = ____\n5.  9 - 4 = ____\n6.  4 - 0 = ____\n7.  10 - 5 = ____\n8.  3 - 1 = ____\n9.  8 - 2 = ____\n10. 7 - 7 = ____\n\n---\n\n**答案**\n\n1.  5 - 1 = **4**\n2.  8 - 3 = **5**\n3.  6 - 6 = **0**\n4.  7 - 2 = **5**\n5.  9 - 4 = **5**\n6.  4 - 0 = **4**\n7.  10 - 5 = **5**\n8.  3 - 1 = **2**\n9.  8 - 2 = **6**\n10. 7 - 7 = **0**', 1, '2026-02-10 11:11:49');
INSERT INTO `exercises` VALUES (18, '习题 - 10以内加法', '好的，这是一组根据您提供的信息生成的习题：\n\n---\n\n**小学一年级数学习题：10以内加法**\n\n**知识点：** 10以内加法\n**题型：** 填写 (填空题)\n**难度：** 简单\n**总题量：** 10题\n\n**请在横线上填写正确的数字。**\n\n1.  1 + 1 = ____\n2.  2 + 1 = ____\n3.  3 + 2 = ____\n4.  4 + 1 = ____\n5.  2 + 2 = ____\n6.  5 + 1 = ____\n7.  3 + 3 = ____\n8.  6 + 1 = ____\n9.  4 + 3 = ____\n10. 5 + 2 = ____\n\n---\n\n**答案**\n\n1.  1 + 1 = **2**\n2.  2 + 1 = **3**\n3.  3 + 2 = **5**\n4.  4 + 1 = **5**\n5.  2 + 2 = **4**\n6.  5 + 1 = **6**\n7.  3 + 3 = **6**\n8.  6 + 1 = **7**\n9.  4 + 3 = **7**\n10. 5 + 2 = **7**', 1, '2026-02-10 11:13:08');
INSERT INTO `exercises` VALUES (19, '习题 - 10以内加法', '好的，根据您的要求，这是一组小学一年级10以内加法习题：\n\n---\n\n**小学一年级数学习题：10以内加法**\n\n**题目：**\n\n请计算并填写横线上的数字。\n\n1.  1 + 2 = ___\n2.  3 + 1 = ___\n3.  4 + 2 = ___\n4.  0 + 5 = ___\n5.  2 + 3 = ___\n6.  6 + 1 = ___\n7.  5 + 3 = ___\n8.  7 + 0 = ___\n9.  2 + 6 = ___\n10. 4 + 4 = ___\n\n---\n\n**答案：**\n\n1.  1 + 2 = **3**\n2.  3 + 1 = **4**\n3.  4 + 2 = **6**\n4.  0 + 5 = **5**\n5.  2 + 3 = **5**\n6.  6 + 1 = **7**\n7.  5 + 3 = **8**\n8.  7 + 0 = **7**\n9.  2 + 6 = **8**\n10. 4 + 4 = **8**', 1, '2026-02-10 11:13:10');
INSERT INTO `exercises` VALUES (20, '习题 - 整式加减', '好的，这是一组为小学一年级学生设计的数学习题，主题是基础加减法（对应小学阶段的“整式加减”概念）。\n\n---\n\n**小学一年级数学练习：基础加减法**\n\n**年级：** 小学一年级\n**学科：** 数学\n**知识点/主题：** 基础加减法（整式加减的入门概念）\n**题型：** 填空题\n**难度：** 简单\n**题量：** 10\n**是否包含答案：** 是\n\n---\n\n**题目：**\n\n请在括号里填上正确的数字。\n\n1.  2 + 3 = ( )\n2.  5 + 4 = ( )\n3.  1 + 7 = ( )\n4.  8 - 3 = ( )\n5.  9 - 6 = ( )\n6.  10 - 2 = ( )\n7.  7 + 5 = ( )\n8.  12 - 4 = ( )\n9.  ( ) + 4 = 9\n10. 10 - ( ) = 6\n\n---\n\n**答案：**\n\n1.  5\n2.  9\n3.  8\n4.  5\n5.  3\n6.  8\n7.  12\n8.  8\n9.  5\n10. 4', 1, '2026-02-10 11:15:03');
INSERT INTO `exercises` VALUES (21, '习题 - 整式加减', '好的，鉴于小学一年级的数学水平，\"整式加减\"这个知识点需要进行非常基础和具象化的解读，即理解为**100以内的加法和减法运算，以及简单的加减法应用题（相当于代数表达式中的常量加减）**。一年级尚不涉及代数符号和多项式。\n\n我将据此为你生成一组习题。\n\n---\n\n**小学一年级数学习题：加减法（初步整式概念）**\n\n**年级：** 小学一年级\n**学科：** 数学\n**主题：** 100以内的加减法，以及简单的“求未知数”题型（用方框代替）\n**难度：** 简单\n**题量：** 10题\n**题型：** 填空题\n\n---\n\n**习题：**\n\n**一、 计算题**\n\n请你计算出下列算式的结果，把答案填在括号里。\n\n1.  5 + 3 = ( )\n2.  8 - 2 = ( )\n3.  6 + 4 = ( )\n4.  10 - 7 = ( )\n5.  9 + 1 = ( )\n\n**二、 找出藏起来的数字**\n\n请你动脑筋，找出方框里应该填哪个数字。\n\n6.  4 + ( ) = 7\n7.  ( ) - 5 = 3\n8.  10 - ( ) = 6\n\n**三、 生活中的加减**\n\n请你读懂题目，算出结果。\n\n9.  小明有3支铅笔，妈妈又给他买了5支，他现在一共有 ( ) 支铅笔。\n10. 树上有9只小鸟，飞走了4只，树上还剩下 ( ) 只小鸟。\n\n---\n\n**答案：**\n\n1.  8\n2.  6\n3.  10\n4.  3\n5.  10\n6.  3\n7.  8\n8.  4\n9.  8\n10. 5', 1, '2026-02-10 11:15:05');
INSERT INTO `exercises` VALUES (22, '习题 - 整式加减', '好的，我理解您的需求是为小学一年级生成数学习题。\n\n请注意，“整式加减”是中学阶段代数学的概念。对于小学一年级，相应的知识点是**20以内数的加减法**以及**简单的加减法算式中求未知数**。我会根据这个实际的知识点来为您生成习题，以符合一年级学生的认知水平。\n\n---\n\n**小学一年级数学练习题**\n\n**知识点/主题：** 20以内数的加减法，求算式中的未知数\n\n**题型：** 填空题\n\n**难度：** 简单\n\n**题量：** 10\n\n---\n\n**题目：**\n\n请在括号里填上正确的数字。\n\n1.  2 + 3 = ( )\n2.  5 + 4 = ( )\n3.  8 - 3 = ( )\n4.  9 - 6 = ( )\n5.  6 + ( ) = 10\n6.  ( ) + 7 = 12\n7.  15 - ( ) = 10\n8.  ( ) - 4 = 5\n9.  7 + 8 = ( )\n10. 13 - 5 = ( )\n\n---\n\n**答案：**\n\n1.  2 + 3 = ( 5 )\n2.  5 + 4 = ( 9 )\n3.  8 - 3 = ( 5 )\n4.  9 - 6 = ( 3 )\n5.  6 + ( 4 ) = 10\n6.  ( 5 ) + 7 = 12\n7.  15 - ( 5 ) = 10\n8.  ( 9 ) - 4 = 5\n9.  7 + 8 = ( 15 )\n10. 13 - 5 = ( 8 )', 1, '2026-02-10 11:17:35');
INSERT INTO `exercises` VALUES (23, '习题 - 整式加减', '您好！\n\n您提及的“整式加减”是初中代数的内容，对于小学一年级的学生来说过于超前和复杂。小学一年级的数学主要学习20以内的加减法、数的认识、简单的几何图形等。\n\n为了符合小学一年级的认知水平，我将根据“加减”这一核心概念，为您生成一组**20以内加减法**的习题，这更符合小学一年级的知识点。我将把“整式加减”理解为**基础的算式加减运算**。\n\n---\n\n**小学一年级数学练习：20以内加减法**\n\n**知识点/主题：** 20以内的加法和减法（相当于“整式加减”在一年级的简化形式）\n**题型：** 填空题 (fill)，选择题 (single)\n**难度：** 简单 (easy)\n**题量：** 10题\n\n---\n\n**一、 填空题 (请在括号里填上正确的数字)**\n\n1.  5 + 3 = ( )\n2.  9 - 4 = ( )\n3.  7 + ( ) = 10\n4.  12 - ( ) = 5\n5.  ( ) + 6 = 15\n\n**二、 选择题 (请选择正确的答案，并将序号填在括号里)**\n\n6.  计算 6 + 7，结果是：\n    A. 12\n    B. 13\n    C. 14\n    ( )\n\n7.  计算 18 - 9，结果是：\n    A. 8\n    B. 9\n    C. 10\n    ( )\n\n8.  下列哪个算式的结果是 10？\n    A. 4 + 7\n    B. 16 - 6\n    C. 5 + 6\n    ( )\n\n9.  在 ( ) 里填上合适的数字，使算式 8 + ( ) = 14 成立。\n    A. 5\n    B. 6\n    C. 7\n    ( )\n\n10. 17 比 8 多多少？\n    A. 7\n    B. 8\n    C. 9\n    ( )\n\n---\n\n**参考答案：**\n\n**一、 填空题**\n1.  8\n2.  5\n3.  3\n4.  7\n5.  9\n\n**二、 选择题**\n6.  B\n7.  B\n8.  B\n9.  B\n10. C', 1, '2026-02-10 11:17:38');
INSERT INTO `exercises` VALUES (24, '习题 - 整式加减', '好的，我理解您的要求。不过，小学一年级的数学知识点中，并没有“整式加减”这一概念。“整式加减”是初中代数的内容，涉及到字母和多项式的运算。\n\n对于小学一年级的学生，与“加减”相关的核心知识点是**20以内数的加减法**，包括：\n*   10以内数的加减法\n*   20以内数的进位加法\n*   20以内数的退位减法\n*   加减法的算式，包括带有未知数的填空题（例如：3 + ( ) = 7）\n\n我将根据小学一年级的实际学习内容，为您生成一组**20以内数的加减法**的习题，以“填空”题型为主，难度为“easy”，并包含答案。这能最大程度地贴合“加减”和“填空”的要求，同时符合一年级学生的认知水平。\n\n---\n\n### 小学一年级数学习题：20以内数的加减法\n\n**年级：** 小学一年级\n**学科：** 数学\n**主题：** 20以内数的加减法（填空题）\n**难度：** 简单\n**题量：** 10题\n\n---\n\n**题目：**\n\n请在括号里填上合适的数字。\n\n1.  3 + 5 = ( )\n2.  9 - 4 = ( )\n3.  ( ) + 6 = 10\n4.  7 + 2 = ( )\n5.  12 - 3 = ( )\n6.  8 + ( ) = 13\n7.  15 - 5 = ( )\n8.  ( ) - 4 = 6\n9.  10 + 7 = ( )\n10. 11 - ( ) = 5\n\n---\n\n**答案：**\n\n1.  8\n2.  5\n3.  4\n4.  9\n5.  9\n6.  5\n7.  10\n8.  10\n9.  17\n10. 6', 1, '2026-02-10 11:18:56');
INSERT INTO `exercises` VALUES (25, '习题 - 整式加减', '好的，鉴于小学一年级的学生尚未接触“整式”的概念，我们将“整式加减”这个主题理解为**基础的数字加减法运算**，包括加法、减法、以及简单的未知数填充（求和数、求被减数、求减数）。这将是为一年级学生设计的“整式加减”的入门级概念。\n\n**年级：** 小学一年级\n**学科：** 数学\n**知识点/主题：** 基础加减法 (作为“整式加减”的入门概念)\n**题型：** 填空题 (fill)\n**难度：** easy\n**题量：** 10\n**是否包含答案：** 是\n\n---\n\n### 小学一年级数学习题：基础加减法（一）\n\n**小朋友们，请仔细计算，在括号里填上正确的数字吧！**\n\n1.  2 + 3 = ( )\n2.  7 - 4 = ( )\n3.  5 + ( ) = 8\n4.  9 - ( ) = 6\n5.  ( ) - 3 = 4\n6.  6 + 5 = ( )\n7.  10 - 2 = ( )\n8.  1 + 4 + 2 = ( )\n9.  小红有4个苹果，小明有3个苹果，他们一共有( )个苹果。\n10. 树上有8只小鸟，飞走了5只，还剩下( )只小鸟。\n\n---\n\n### 答案\n\n1.  5\n2.  3\n3.  3\n4.  3\n5.  7\n6.  11\n7.  8\n8.  7\n9.  7\n10. 3', 1, '2026-02-10 11:18:57');
INSERT INTO `exercises` VALUES (26, '习题 - 整式加减', '好的，根据您的要求，我为小学一年级学生设计了一组关于**基础加减法**的习题。\n\n**重要说明：**\n\"整式加减\"（Polynomial Addition and Subtraction）是初中阶段的数学知识点，对于小学一年级学生来说过于超前。考虑到年级和难度，我将主题解释为**“20以内的加减法及简单应用”**，这更符合一年级学生的认知水平和学习内容。\n\n---\n\n### 小学一年级数学练习：基础加减法\n\n**知识点/主题：** 20以内的加减法及简单应用\n**题型：** 填空题 (fill-in-the-blank), 单选题 (single-choice)\n**难度：** 简单\n\n---\n\n**一、填空题 (共7题)**\n\n1.  计算：5 + 3 = ( )\n2.  计算：9 - 4 = ( )\n3.  计算：10 + 7 = ( )\n4.  计算：15 - 5 = ( )\n5.  在括号里填上合适的数：( ) + 6 = 10\n6.  在括号里填上合适的数：12 - ( ) = 8\n7.  小丽有4支铅笔，小明比小丽多2支。小明有 ( ) 支铅笔。\n\n**二、单选题 (共3题)**\n\n8.  下列算式中，得数是13的是哪一个？\n    A. 7 + 5\n    B. 8 + 6\n    C. 9 + 4\n\n9.  计算：16 - 7 =\n    A. 8\n    B. 9\n    C. 10\n\n10. 小朋友们排队，小红前面有5人，后面有3人，这一队一共有多少人？\n    A. 8人\n    B. 9人\n    C. 10人\n\n---\n\n### 答案\n\n**一、填空题**\n\n1.  5 + 3 = ( **8** )\n2.  9 - 4 = ( **5** )\n3.  10 + 7 = ( **17** )\n4.  15 - 5 = ( **10** )\n5.  ( **4** ) + 6 = 10\n6.  12 - ( **4** ) = 8\n7.  小丽有4支铅笔，小明比小丽多2支。小明有 ( **6** ) 支铅笔。\n\n**二、单选题**\n\n8.  C. 9 + 4\n9.  B. 9\n10. B. 9人 (5人 + 小红1人 + 3人 = 9人)', 1, '2026-02-10 11:20:25');
INSERT INTO `exercises` VALUES (27, '习题 - 整式加减', '好的，根据您的要求，小学一年级学生学习的数学内容中，并没有“整式加减”这个概念。整式加减是初中阶段的代数内容。\n\n考虑到小学一年级的学习范围和“整式加减”的核心思想（合并同类项、不同类项不能直接合并），我将把“整式加减”**具象化**为：\n\n1.  **同类物品的加减（合并同类项）：** 例如：3个苹果 + 2个苹果 = 5个苹果。\n2.  **不同类物品不能直接合并（不能合并异类项）：** 例如：3个苹果 + 2个香蕉 = 3个苹果和2个香蕉（不能直接说成5个“果”）。但如果题目只问数字加减，则仍是简单数字加减。\n3.  **简单的数字加减运算**作为基础。\n\n这样处理既能满足“整式加减”的精神，又能符合一年级的认知水平。\n\n---\n\n### 小学一年级数学习题：物品的加减与数字计算\n**知识点/主题：** 物品的合并与分离（类比“整式加减”）、20以内加减法\n**难度：** 简单\n\n---\n\n**一、 填一填 (Fill in the blank)**\n\n1.  小明有 3 个 **苹果**，妈妈又给了他 2 个 **苹果**。\n    小明一共有 (        ) 个 **苹果**。\n    答案：5\n\n2.  盒子里有 5 块 **积木**，小红拿走了 1 块 **积木**。\n    盒子里还剩下 (        ) 块 **积木**。\n    答案：4\n\n3.  花园里有 4 朵 **红花** 和 3 朵 **黄花**。\n    花园里一共有 (        ) 朵 **花**。\n    答案：7\n\n4.  小鸟有 6 只 **虫子**，吃掉了 2 只 **虫子**。\n    小鸟还剩下 (        ) 只 **虫子**。\n    答案：4\n\n5.  教室里有 7 张 **椅子**，又搬来了 3 张 **椅子**。\n    教室里现在有 (        ) 张 **椅子**。\n    答案：10\n\n**二、 选一选 (Multiple Choice)**\n\n6.  有 2 个 **气球**，再买来 4 个 **气球**，一共有多少个 **气球**？\n    A. 5 个气球\n    B. 6 个气球\n    C. 7 个气球\n    答案：B\n\n7.  小动物们排队，有 8 只 **小兔** 和 2 只 **小狗**。小兔比小狗多几只？\n    A. 6 只小兔\n    B. 8 只小兔\n    C. 10 只小动物\n    答案：A\n\n8.  盘子里有 9 颗 **草莓**，吃掉了 3 颗 **草莓**，还剩下多少颗 **草莓**？\n    A. 5 颗草莓\n    B. 7 颗草莓\n    C. 6 颗草莓\n    答案：C\n\n9.  计算： 5 + 3 = (        )\n    A. 7\n    B. 8\n    C. 9\n    答案：B\n\n10. 计算： 10 - 4 = (        )\n    A. 5\n    B. 6\n    C. 7\n    答案：B\n\n---', 1, '2026-02-10 11:20:27');
INSERT INTO `exercises` VALUES (28, '习题 - 整式加减', '好的，我明白您的需求。但是，小学一年级的数学课程中并没有“整式加减”这个知识点。整式加减是中学阶段（通常是初中）学习的代数内容。\n\n考虑到小学一年级的学生，他们学习的是最基础的个位数加减法，通常在20以内，以及一些简单的应用题。\n\n为了符合小学一年级的知识水平和难度要求，我将把“整式加减”解释为**“基础加减法”**，即数字的加减运算。\n\n以下是根据您的要求生成的习题：\n\n---\n\n**小学一年级数学：基础加减法练习**\n\n**知识点/主题：** 10以内加减法，20以内不进位不退位加减法\n**题型：** 填空题\n**难度：** 简单\n**题量：** 10\n\n**请在括号里填上正确的数字。**\n\n1.  2 + 3 = (  )\n2.  8 - 4 = (  )\n3.  5 + (  ) = 9\n4.  10 - (  ) = 6\n5.  (  ) + 7 = 10\n6.  (  ) - 3 = 5\n7.  6 + 4 = (  )\n8.  12 - 2 = (  )\n9.  7 + (  ) = 11\n10. 15 - (  ) = 10\n\n---\n\n**答案**\n\n1.  5\n2.  4\n3.  4\n4.  4\n5.  3\n6.  8\n7.  10\n8.  10\n9.  4\n10. 5', 1, '2026-02-10 11:21:55');
INSERT INTO `exercises` VALUES (29, '习题 - 整式加减', '好的，考虑到小学一年级尚未学习“整式”的概念，这里将“整式加减”知识点转化为符合一年级学生认知水平的**20以内加减法**，特别是包含**未知数（用方框表示）**的简单加减法，以及通过运算进行大小比较的题目。这些是将来学习整式加减的基础。\n\n---\n\n### 小学一年级数学练习题：20以内加减法（基础）\n\n**知识点/主题：** 20以内加减法（含未知数与比较）\n**年级：** 小学一年级\n**难度：** 简单\n**题量：** 10题\n\n---\n\n**一、填一填（在括号里填上正确的数字，或在〇里填上“＞”、“＜”或“＝”）**\n\n1.  3 + 5 = ( )\n    *   *这相当于最简单的整式加法，只是没有变量。*\n\n2.  9 - 4 = ( )\n    *   *这相当于最简单的整式减法。*\n\n3.  7 + ( ) = 10\n    *   *这是寻找缺失的加数，是将来解简单方程 x + a = b 的基础。*\n\n4.  ( ) + 6 = 12\n    *   *同样是寻找缺失的加数。*\n\n5.  8 - ( ) = 3\n    *   *这是寻找缺失的减数，是将来解 a - x = b 的基础。*\n\n6.  ( ) - 5 = 4\n    *   *这是寻找缺失的被减数，是将来解 x - a = b 的基础。*\n\n7.  11 + 6 = ( )\n    *   *20以内不进位加法。*\n\n8.  18 - 7 = ( )\n    *   *20以内不退位减法。*\n\n9.  在〇里填上“＞”、“＜”或“＝”： 5 + 4 〇 10 - 2\n    *   *这要求学生先进行加减运算，再比较结果，训练综合能力。*\n\n10. 在〇里填上“＞”、“＜”或“＝”： 15 - 3 〇 7 + 5\n    *   *同上，综合运用加减法进行比较。*\n\n---\n\n**答案：**\n\n1.  8\n2.  5\n3.  3\n4.  6\n5.  5\n6.  9\n7.  17\n8.  11\n9.  > (因为 5 + 4 = 9，10 - 2 = 8，9 > 8)\n10. = (因为 15 - 3 = 12，7 + 5 = 12，12 = 12)', 1, '2026-02-10 11:21:56');

-- ----------------------------
-- Table structure for users
-- ----------------------------
DROP TABLE IF EXISTS `users`;
CREATE TABLE `users`  (
  `id` int NOT NULL AUTO_INCREMENT,
  `name` varchar(50) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL,
  `email` varchar(120) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL,
  `password_hash` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL,
  `nickname` varchar(64) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NULL DEFAULT NULL,
  `gender` varchar(16) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NULL DEFAULT NULL,
  `bio` varchar(500) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NULL DEFAULT NULL,
  `phone` varchar(32) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NULL DEFAULT NULL,
  `school` varchar(128) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NULL DEFAULT NULL,
  `major` varchar(128) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NULL DEFAULT NULL,
  `job_title` varchar(128) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NULL DEFAULT NULL,
  `avatar_url` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NULL DEFAULT NULL,
  PRIMARY KEY (`id`) USING BTREE,
  UNIQUE INDEX `ix_users_email`(`email` ASC) USING BTREE
) ENGINE = InnoDB AUTO_INCREMENT = 6 CHARACTER SET = utf8mb4 COLLATE = utf8mb4_unicode_ci ROW_FORMAT = Dynamic;

-- ----------------------------
-- Records of users
-- ----------------------------
INSERT INTO `users` VALUES (1, 'TEST', 'test@text.com', 'scrypt:32768:8:1$xPzh6uMwkJWNncvh$9fa5e45d11d341786168e17258e0320b8f01b39efb2370650f00787054f08b99f2a85ffe40c6fa3bcc830f12d33327f38e6567c75fe7273e3005162f643dfc8c', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL);
INSERT INTO `users` VALUES (2, 'TEST', 'test@test.com', 'scrypt:32768:8:1$v3VY85OcYGWgVksl$8b71717f3c9e596aec8fcdf93f07d557f36eef841ed3fe0088fbb8fbc271d9714875a190f190ce412f4d7235342be105012fc095ce997c684aa3a0d96d43a09a', '111', '女', 'hello world', '123333366', '上海交通大学', '物理', '教授', NULL);
INSERT INTO `users` VALUES (3, 'TEST1', 'test1@test.com', 'scrypt:32768:8:1$JfJqXlXJyKsVvTDx$7ae96c4888f8b35dc5f111919c06b8dabfa80ba2591d4755d15ca2da976c9dccde17a8613917bfad00d96c671f9b2814f9c5f07790b2b99614afa12450beb533', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL);
INSERT INTO `users` VALUES (4, '1', '1@1.com', 'scrypt:32768:8:1$04bnMV5KypR2fg8U$4b043267847e67a872927aa0068016301bc42335431757fd5a2ea3fd11802f1c7f2fa446acbed9df8f45c9b09d969dc5e8035f0af3f8f439e9f61a1b7b5657ed', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL);
INSERT INTO `users` VALUES (5, 'Jessica', '2812554107@qq.com', 'scrypt:32768:8:1$POOBGEMuWzJuhhnj$0665ed39eb37c24aaee81b4388770c62abb0563dd26f2b38a878034cfa8b070c5ba8e3189b925356b6d6851af600618c812cbecc899243a61249b234abd1d720', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL);

SET FOREIGN_KEY_CHECKS = 1;
